--- a/fans-alley/src/app/core/header/header.component.html
+++ b/fans-alley/src/app/core/header/header.component.html
@@ -1,1 +1,33 @@
-<p>header works!</p>
+<header>
+
+    <app-rotating-image 
+    [sideClass]="'left'"
+    [imageSrc]="'../../../assets/images/deathlyhallowslogo-650x650.jpg'"
+    />
+
+    <nav>
+        <ul>
+            <li>
+                <a href="#" >The Display</a>
+            </li>
+            <li>
+                <a href="#">Login &#8612;</a>
+            </li>
+            <li>
+                <a href="#">Sell your art!</a>
+            </li>
+            <li>
+                <a href="#">User profile</a>
+            </li>
+            <li>
+                <a href="#">Logout &#8614;</a>
+            </li>
+        </ul>
+    </nav>
+
+    <app-rotating-image 
+    [sideClass]="'right'"
+    [imageSrc]="'../../../assets/images/10308940.png'"
+    />
+    
+</header>
