--- a/fans-alley/src/app/core/rotating-image/rotating-image.component.html
+++ b/fans-alley/src/app/core/rotating-image/rotating-image.component.html
@@ -1,5 +1,5 @@
 <div class="rotating-image" [ngClass]="sideClass">
-    <a href="#">
+    <a href="#" (click)="onClick()">
         <img [src]="imageSrc" alt="">
     </a>
 </div>
