Added routing and page templates
Added routing and templates for:
- Login, Register
- User info

--- a/fans-alley/src/app/core/header/header.component.html
+++ b/fans-alley/src/app/core/header/header.component.html
@@ -8,19 +8,22 @@
     <nav>
         <ul>
             <li>
-                <a href="#" >The Display</a>
+                <a href="/products" >The Display</a>
             </li>
             <li>
-                <a href="#">Login &#8612;</a>
+                <a href="/login">Login &#8612;</a>
             </li>
             <li>
-                <a href="#">Sell your art!</a>
+                <a href="/register">Register</a>
             </li>
             <li>
-                <a href="#">User profile</a>
+                <a href="/create">Sell your art!</a>
             </li>
             <li>
-                <a href="#">Logout &#8614;</a>
+                <a href="/profile">User profile</a>
+            </li>
+            <li>
+                <a href="/logout">Logout &#8614;</a>
             </li>
         </ul>
     </nav>
