Added the rest of the templates
I am now ready to start working on the main functionalities!

--- a/fans-alley/src/app/core/aside/aside.component.html
+++ b/fans-alley/src/app/core/aside/aside.component.html
@@ -3,20 +3,28 @@
         <div class="menu-box">1</div>
         <span>Paintings and Illustrations</span>
     </div>
-    <div class="menu-section">
-        <div class="menu-box">2</div>
-        <span>Pottery</span>
-    </div>
-    <div class="menu-section">
-        <div class="menu-box">3</div>
-        <span>Textile Arts</span>
-    </div>
-    <div class="menu-section">
-        <div class="menu-box">4</div>
-        <span>Wood Carving and Glass Art</span>
-    </div>
-    <div class="menu-section">
-        <div class="menu-box">5</div>
-        <span>Jewelry and Decorations</span>
-    </div>
+    <a routerLink="/products">
+        <div class="menu-section">
+            <div class="menu-box">2</div>
+            <span>Pottery</span>
+        </div>
+    </a>
+    <a routerLink="/products">
+        <div class="menu-section">
+            <div class="menu-box">3</div>
+            <span>Textile Arts</span>
+        </div>
+    </a>
+    <a routerLink="/products">
+        <div class="menu-section">
+            <div class="menu-box">4</div>
+            <span>Wood Carving and Glass Art</span>
+        </div>
+    </a>
+    <a routerLink="/products">
+        <div class="menu-section">
+            <div class="menu-box">5</div>
+            <span>Jewelry and Decorations</span>
+        </div>
+    </a>
 </aside>
