--- a/fans-alley/src/app/core/header/header.component.html
+++ b/fans-alley/src/app/core/header/header.component.html
@@ -8,22 +8,22 @@
     <nav>
         <ul>
             <li>
-                <a href="/products" >The Display</a>
+                <a routerLink="/products" routerLinkActive="selected-page">The Display</a>
             </li>
             <li>
-                <a href="/login">Login &#8612;</a>
+                <a routerLink="/login" routerLinkActive="selected-page">Login &#8612;</a>
             </li>
             <li>
-                <a href="/register">Register</a>
+                <a routerLink="/register" routerLinkActive="selected-page">Register</a>
             </li>
             <li>
-                <a href="/create">Sell your art!</a>
+                <a routerLink="/create" routerLinkActive="selected-page">Sell your art!</a>
             </li>
             <li>
-                <a href="/profile">User profile</a>
+                <a routerLink="/profile" routerLinkActive="selected-page">User profile</a>
             </li>
             <li>
-                <a href="/logout">Logout &#8614;</a>
+                <a routerLink="/logout" routerLinkActive="selected-page">Logout &#8614;</a>
             </li>
         </ul>
     </nav>
