--- a/fans-alley/src/app/user/login/login.component.html
+++ b/fans-alley/src/app/user/login/login.component.html
@@ -6,15 +6,9 @@
                 <p>LOGIN</p>
             </div>
           
-          <!-- Sliding Toggle Button -->
-          <label class="toggle-switch">
-            <input type="checkbox">
-            <span class="slider"></span>
-          </label>
-          
           <!-- Text Input -->
-          <label for="text-input">Text Input:</label>
-          <input type="text" id="text-input" name="text-input" placeholder="Enter text">
+          <label for="email">Text Input:</label>
+          <input type="email" id="email" name="email" placeholder="Registered email">
           
           <!-- Text Area -->
           <label for="text-area">Text Area:</label>
