--- a/fans-alley/src/app/user/login/login.component.css
+++ b/fans-alley/src/app/user/login/login.component.css
@@ -1,7 +1,14 @@
 .forms {
     display: flex;
     justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
+
+.forms.visible {
+    opacity: 1;
+}
+
 
 .form-container {
     width: 100%;
@@ -46,47 +53,9 @@ label {
     height: 26px;
 }
 
-.toggle-switch input {
-    opacity: 0;
-    margin: 0;
-    padding: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: blue;
-    transition: .4s;
-    border-radius: 26px;
-}
-
-.slider::before {
-    position: absolute;
-    content: "";
-    height: 18px;
-    width: 18px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    transition: .4s;
-    border-radius: 50%;
-}
-
-input:checked + .slider {
-    background-color: #4CAF50;
-}
-
-input:checked + .slider::before {
-    transform: translateX(24px);
-}
-
-input[type="text"],
+input[type="email"],
 textarea,
-input[type="number"],
+input[type="password"],
 select {
     width: 100%;
     padding: 10px;
@@ -96,65 +65,20 @@ select {
     transition: border-color 0.3s;
 }
 
-input[type="text"]:focus,
+input[type="email"]:focus,
 textarea:focus,
-input[type="number"]:focus,
+input[type="password"]:focus,
 select:focus {
     border-color: #4CAF50;
     outline: none;
 }
 
-textarea {
-    resize: vertical;
-    min-height: 100px;
-}
-
-.upload-button {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px;
+.not-registered {
     text-align: center;
-    display: inline-block;
-    border-radius: 8px;
-    cursor: pointer;
+    color: #17721a;
+    font-weight: bold;
 }
 
-.upload-button:hover {
-    background-color: #45a049;
-}
-
-input[type="file"]{
-    display: none;
-}
-
-.image-preview {
-    width: 100%;
-    height: 200px;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 16px;
-    color: #aaa;
-    border-radius: 4px;
-    overflow: hidden;
-    text-shadow: none;
-}
-
-.image-preview img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMCIgaGVpZ2h0PSIxMCIgdmlld0JveD0iMCAwIDEwIDEwIj48cGF0aCBkPSJNNSA3bC00LTVoOXYxMGgtOXoiIGZpbGw9IiM3Nzc3NzciLz48L3N2Zz4=');
-    background-position: right 10px center;
-    background-repeat: no-repeat;
-    padding-right: 30px;
+.not-registered:hover {
+    color: #0c4b0e;
 }
