--- a/fans-alley/src/app/user/login/login.component.html
+++ b/fans-alley/src/app/user/login/login.component.html
@@ -7,11 +7,13 @@
       </div>
 
       <!-- Text Input -->
-      <label for="email">Text Input:</label>
+      <label for="email">Email:</label>
       <input type="email" id="email" name="email" placeholder="Registered email">
 
+      <app-error />
+
       <!-- Password Input -->
-      <label for="password">Password</label>
+      <label for="password">Password:</label>
       <input type="password" id="password" name="password" placeholder="Enter your password">
 
       <a routerLink="/register" class="not-registered">Not registered yet? Do it!</a>
