--- a/fans-alley/src/app/user/login/login.component.html
+++ b/fans-alley/src/app/user/login/login.component.html
@@ -1,6 +1,6 @@
 <section class="forms container" [class.visible]="isVisible">
   <section class="form-container">
-    <form class="styled-form">
+    <form class="styled-form" #form="ngForm" (ngSubmit)="login(form)">
 
       <div class="form-title">
         <p>LOGIN</p>
@@ -8,13 +8,37 @@
 
       <!-- Text Input -->
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" placeholder="Registered email">
+      <input 
+      type="email" 
+      id="email" 
+      name="email" 
+      placeholder="Registered email"
+      ngModel
+      #inputEmail="ngModel"
+      required
+      >
 
-      <app-error />
+      <ng-container *ngIf="inputEmail.touched && inputEmail.errors">
+        <app-error [message]="'Forgeting something???'"/>
+      </ng-container>
 
       <!-- Password Input -->
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" placeholder="Enter your password">
+      <input 
+      type="password" 
+      id="password" 
+      name="password" 
+      placeholder="Enter your password"
+      ngModel
+      #inputPassword="ngModel"
+      required
+      >
+
+      <ng-container *ngIf="inputPassword.touched && inputPassword.errors">
+        <app-error [message]="'Forgeting something???'"/>
+      </ng-container>
+
+      <app-submit-btn [text]="'Login'" [disabled]="!form.valid"/>
 
       <a routerLink="/register" class="not-registered">Not registered yet? Do it!</a>
 
