Added additional CSS
Yes, I forgot the password fields in the register form.

--- a/fans-alley/src/app/user/register/register.component.css
+++ b/fans-alley/src/app/user/register/register.component.css
@@ -160,3 +160,20 @@ select {
     background-repeat: no-repeat;
     padding-right: 30px;
 }
+
+#password {
+    border: 2px solid #4CAF50;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#rePassword {
+    border: 2px solid #FF9800;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#password:focus, #rePassword:focus {
+    border-color: #2196F3;
+    outline: none;
+}
