Added separate product-item component

--- a/fans-alley/src/app/products/product-list/product-list.component.html
+++ b/fans-alley/src/app/products/product-list/product-list.component.html
@@ -1,104 +1,8 @@
 <section class="container products">
-    <div class="card">
-        <section class="product-info">
-            <div class="card-top-border"></div>
-            <p class="product-title">Hogwarts at Night</p>
-            <p class="product-type">Type: Wood carving</p>
-        </section>
-        <img src="../../../assets/images/s-l1200.jpg" alt="" class="hover-image">
-        <p class="not-enough">Someone has offered more than $3</p>
-        <a routerLink="/details" class="more-info">More info about the product and the artist</a>
-        <input type="number" class="offer" value="4">
-        <section class="make-offer">
-            <a href="#" class="offer-button">Make offer for $4</a>
-            <a href="#" class="buy-now-button">Buy NOW for $15</a>
-        </section>
-    </div>
-
-    <div class="card">
-        <p class="enough">There are <span class="number-offers">3</span> offers for this product</p>
-        <section class="product-info">
-            <div class="card-top-border"></div>
-            <p class="product-title">Hogwarts at Night</p>
-            <p class="product-type">Type: Wood carving</p>
-        </section>
-        <img src="../../../assets/images/PPR54404.jpg" alt="">
-        <!-- <p class="enough">You have the best offer!</p> -->
-        <a href="#" class="more-info">See OFFERS, EDIT or DELETE your product</a>
-        <!-- <input type="number" class="offer" placeholder="Type a sum you want to offer">
-        <section class="make-offer">
-            <a href="#" class="offer-button">Make offer for $4</a>
-            <a href="#" class="buy-now-button">Buy now for $15</a>
-        </section> -->
-    </div>
-
-    <div class="card">
-        <section class="product-info">
-            <div class="card-top-border"></div>
-            <p class="product-title">Hogwarts at Night with boats and owls and one big giant Hagrid</p>
-            <p class="product-type">Type: Wood carving</p>
-        </section>
-        <img src="../../../assets/images/PPR54404.jpg" alt="">
-        <p class="enough">You have the best offer!</p>
-        <a href="#" class="more-info">More info about the product and the artist</a>
-        <input type="number" class="offer" value="4">
-        <section class="make-offer">
-            <a href="#" class="offer-button">Make offer for $4</a>
-            <a href="#" class="buy-now-button">Buy now for $15</a>
-        </section>
-    </div>
-
-    <div class="card">
-        <section class="product-info">
-            <div class="card-top-border"></div>
-            <p class="product-title">Penis</p>
-            <p class="product-type">Type: Wood carving</p>
-        </section>
-        <img src="../../../assets/images/s-l1200.jpg" alt="">
-        <!-- <p class="not-enough">Someone has offered more than $3</p> -->
-        <a href="#" class="more-info">More info about the product and the artist</a>
-        <input type="number" class="offer" value="1">
-        <section class="make-offer">
-            <a href="#" class="offer-button">Make offer for $1</a>
-            <a href="#" class="buy-now-button">Buy NOW for $15</a>
-        </section>
-    </div>
-
-    <div class="card">
-        <p class="not-enough">There are <span class="number-offers">0</span> offers for this product</p>
-        <section class="product-info">
-            <div class="card-top-border"></div>
-            <p class="product-title">Hogwarts at Night</p>
-            <p class="product-type">Type: Wood carving</p>
-        </section>
-        <img src="../../../assets/images/s-l1200.jpg" alt="" class="hover-image">
-        <!-- <p class="not-enough">Someone has offered more than $3</p> -->
-        <a href="#" class="more-info">More info about the product and the artist</a>
-        <!-- <input type="number" class="offer" value="4">
-        <section class="make-offer">
-            <a href="#" class="offer-button">Make offer for $4</a>
-            <a href="#" class="buy-now-button">Buy NOW for $15</a>
-        </section> -->
-    </div>
-
-    <div class="card">
-        <p class="not-enough">There are <span class="number-offers">0</span> offers for this product</p>
-        <p class="enough">There are <span class="number-offers">3</span> offers for this product</p>
-        <section class="product-info">
-            <div class="card-top-border"></div>
-            <p class="product-title">Card template</p>
-            <p class="product-type">Type: Finished!</p>
-        </section>
-        <img src="../../../assets/images/s-l1200.jpg" alt="" class="hover-image">
-        <p class="not-enough">Someone has offered more than $3</p>
-        <p class="enough">You have the best offer!</p>
-        <a href="#" class="more-info">More info about the product and the artist</a>
-        <a href="#" class="more-info">See OFFERS, EDIT or DELETE your product</a>
-        <input type="number" class="offer" value="4">
-        <section class="make-offer">
-            <a href="#" class="offer-button">Make offer for $4</a>
-            <a href="#" class="buy-now-button">Buy NOW for $15</a>
-        </section>
-    </div>
-
+<app-product-item />
+<app-product-item />
+<app-product-item />
+<app-product-item />
+<app-product-item />
+<app-product-item />
 </section>
