Added login and authorisation
The login and logout now works.

--- a/fans-alley/src/app/core/header/header.component.html
+++ b/fans-alley/src/app/core/header/header.component.html
@@ -23,7 +23,7 @@
                 <a routerLink="/profile" routerLinkActive="selected-page">User profile</a>
             </li>
             <li>
-                <a routerLink="/logout" routerLinkActive="selected-page">Logout &#8614;</a>
+                <a (click)="logout()" class="logout-link">Logout &#8614;</a>
             </li>
         </ul>
     </nav>
