--- a/fans-alley/src/app/core/header/header.component.css
+++ b/fans-alley/src/app/core/header/header.component.css
@@ -36,6 +36,10 @@ nav ul li a:hover {
     0 0 20px #ff0000;
 }
 
+.logout-link {
+    cursor: pointer;
+}
+
 @media (max-width: 900px) {
 
     header {
