Added register functionality
Users can register.

--- a/fans-alley/src/app/user/user-info/user-info.component.html
+++ b/fans-alley/src/app/user/user-info/user-info.component.html
@@ -1,5 +1,5 @@
 <section class="user-info container">
-    <img src="../../../assets/images/47a72da70b3f7a301273b06cac9ea615c8-06-bob-ross-painting.rsquare.w400.webp" alt="">
+    <img src={{user?.imageUrl}} alt="">
     <p class="info-username"><span class="section-title">Username:</span>{{user?.username}}</p>
     <section class="personal">
         <p><span class="section-title">Name:</span>{{user?.name}}</p>
