--- a/fans-alley/src/app/products/details/details.component.html
+++ b/fans-alley/src/app/products/details/details.component.html
@@ -1,13 +1,13 @@
 <section class="product-info-page container">
-    <div class="price-tag">$15</div>
-    <img src="../../../assets/images/original.jpg" alt="">
+    <div class="price-tag">${{product.buyPrice}}</div>
+    <img src={{product.imageUrl}} alt="">
         <input type="number" class="offer" value="4">
     <section class="make-offer-on-page">
         <a href="#" class="offer-button-on-page">Make offer for $4</a>
-        <a href="#" class="buy-now-button-on-page">Buy NOW for $15</a>
+        <a href="#" class="buy-now-button-on-page">Buy NOW for ${{product.buyPrice}}</a>
     </section>
     <a href="#" class="more-from-this-artist-button">More from this atrist</a>
-    <p class="product-description">This is a mug. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi saepe in vitae molestiae. Quae iusto explicabo inventore et quam vel, molestiae cupiditate autem maxime ipsam aut a dolor dolorem obcaecati.</p>
-    <a href="#" class="edit-button">Edit</a>
+    <p class="product-description">{{product.description}}</p>
+    <a [routerLink]="'/products/' + product._id + '/edit'" class="edit-button">Edit</a>
     <a href="#" class="remove-button">Delete</a>
 </section>
