--- a/fans-alley/src/app/products/edit/edit.component.html
+++ b/fans-alley/src/app/products/edit/edit.component.html
@@ -1,1 +1,77 @@
-<p>edit works!</p>
+<section class="forms container">
+    <section class="form-container">
+        <form class="styled-form" #form="ngForm" (ngSubmit)="edit(form)">
+
+            <div class="form-title">
+                <p>Edit your product</p>
+            </div>
+          
+
+            <label for="productName">Product name:</label>
+            <input
+              type="text"
+              id="productName"
+              name="productName"
+              placeholder="Enter product name"
+              ngModel
+              required
+              maxlength="20"
+              #productName="ngModel"
+            />
+            <ng-container *ngIf="productName.touched && productName.errors">
+              <app-error *ngIf="productName.errors['required']" [message]="'Product name is required'"/>
+              <app-error *ngIf="productName.errors['maxlength']" [message]="'Name is too long'"/>
+            </ng-container>
+      
+            <label for="description">Description:</label>
+            <textarea
+              id="description"
+              name="description"
+              placeholder="Describe your product"
+              ngModel
+              required
+              minlength="5"
+              #description="ngModel"
+            ></textarea>
+            <ng-container *ngIf="description.touched && description.errors">
+              <app-error *ngIf="description.errors['required']" [message]="'Description is required'"/>
+              <app-error *ngIf="description.errors['minlength']" [message]="'description is too short'"/>
+            </ng-container>
+      
+            <label for="price">Instant buy price:</label>
+            <input
+              type="number"
+              id="price"
+              name="price"
+              placeholder="Enter price"
+              ngModel
+              required
+              min="1"
+              #price="ngModel"
+            />
+            <ng-container *ngIf="price.touched && price.errors">
+              <app-error *ngIf="price.errors['required']" [message]="'Price is required'"/>
+              <app-error *ngIf="price.errors['min']" [message]="'Price should be at least $1'"/>
+            </ng-container>
+          
+          <!-- File Upload Button -->
+          <label for="file-upload" class="upload-button">Upload Picture</label>
+          <input
+            type="file"
+            id="file-upload"
+            name="file-upload"
+            accept="image/*"
+            (change)="onFileSelected($event)"
+            >
+          
+          <!-- Image Preview Area -->
+          <div class="image-preview" id="image-preview">
+            <img *ngIf="previewUrl" [src]="previewUrl" alt="Image preview" style="max-width: 100px; max-height: 100px;" />
+            <p *ngIf="!previewUrl">No image selected</p>
+          </div>
+
+          <app-submit-btn [text]="'Create your product'" [disabled]="!form.valid"/>
+      
+        </form>
+      </section>
+</section>
